--- a/client/templates/loyaltyCards/loyaltyCards_template.html
+++ b/client/templates/loyaltyCards/loyaltyCards_template.html
@@ -68,7 +68,7 @@
     </div>
     <div class="ui grid">
       <div class="one column row">
-        <div class="column"><button type="button" class="ui labeled icon yellow fluid button" id="intro"><i class="help icon"></i>Aide</button></div>
+        <div class="column"><button type="button" class="ui labeled icon basic yellow fluid button" id="intro"><i class="help icon"></i>Aide</button></div>
       </div>
     </div>
 
