--- a/client/templates/promote/promote_template.html
+++ b/client/templates/promote/promote_template.html
@@ -2,10 +2,12 @@
   <div class="ui segment basic">
     <h3>Utilisez Loyali dans votre commerce ? Rien de plus simple.</h3>
     <p>
-      Il suffit d'<a href="{{pathFor 'createPlace'}}">inscrire votre commerce</a> en donnant son nom et son adresse.<br>
-      Puis vous définissez votre programme de carte de fidélité (ex: un café offert tout les dix points).<br>
+      Il suffit d'inscrire votre commerce en donnant son nom et son adresse.<br>
+      Vous définissez votre programme de fidélité (ex: 1 point par repas, un café offert tout les dix points).<br>
       Et, c'est tout.<br><br>
-      Vous êtes prêt à distribuer des points sur les cartes fidélité de vos clients et à rendre la monnaie sur les titres restaurant sous forme d'avoirs électronique. Il suffit de scanner le QR code que le client vous présente sur son application Loyali avec votre application Loyali.
+      Vous êtes prêt à distribuer des points sur les cartes fidélité de vos clients.<br>
+      Vous pouvez rendre la monnaie sur les titres restaurant sous forme d'avoirs électronique.<br>
+      Il suffit de scanner le QR code que le client vous présente sur son application Loyali avec votre application Loyali.
     </p>
     <h2 class="ui icon header center aligned">
        <i class="blue users icon" data-action="vouchers"></i>
