--- a/client/templates/contact/contact_template.html
+++ b/client/templates/contact/contact_template.html
@@ -1,6 +1,6 @@
 <template name='contact'>
 
-    <h2 class="ui header">Contactez l'équipe Loyali</h2>
+    <h2 class="ui header">Contactez nous</h2>
     {{#autoForm id="contact" type="insert" collection="Contacts" enctype="multipart/form-data" doc=this}}
       {{> afQuickField placeholder="schemaLabel" name="name" value=name}}
       {{> afQuickField placeholder="schemaLabel" name="email" value=email}}
@@ -8,5 +8,5 @@
       {{> afQuickField placeholder="schemaLabel" name="message"}}
       <button class="fluid ui positive button" type="submit">Envoyer</button>
     {{/autoForm}}
-
+    <br>
 </template>
