--- a/client/templates/magicPoint/magicPoint_template.html
+++ b/client/templates/magicPoint/magicPoint_template.html
@@ -26,7 +26,7 @@
         <img class="ui small image" src="{{loyaliLogo}}" alt="Loyali" />
         <div class="content">
           Désolé
-          <div class="sub header">il semble que vous avez déjà eu votre 1er poins</div>
+          <div class="sub header">il semble que vous avez déjà eu votre 1er poins ou vous êtes deconnecté</div>
         </div>
       </h2>
       <p>
