--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -4,14 +4,16 @@
       <div class="ui raised center aligned segment">
         <h3 class="ui header">Bienvenue sur votre Loyali</h3>
         {{#if isMobile}}
-        <button type="button" class="ui labeled icon button fluid green" data-action="scan"><i class="qrcode icon"></i>Scanner un code client</button>
+        <button type="button" class="ui labeled icon button fluid green" data-action="scan"><i class="qrcode icon"></i>Scanner un code</button>
         <br>
         {{/if}}
-        <a class="ui labeled icon button fluid teal" href="{{pathFor 'customers' placeId=currentUser.profile.currentPlace}}"><i class="users icon"></i>Gérez vos clients</a>
+        <a class="ui labeled icon button fluid teal" href="{{pathFor 'customers' placeId=currentUser.profile.currentPlace}}"><i class="users icon"></i>Mes clients</a>
         <br>
-        <a class="ui labeled icon button fluid orange" href="{{pathFor 'myPlaces'}}"><i class="setting icon"></i>Gérez vos commerces</a>
+        <a class="ui labeled icon button fluid yellow" href="{{pathFor 'place' placeId=currentUser.profile.currentPlace}}"><i class="marker icon"></i>Mon Commerce Actuel</a>
+        {{#if isInRole 'owners'}}
         <br>
-        <a type="button" class="ui labeled icon green fluid button" href="{{pathFor 'contact'}}"><i class="mail icon"></i>Contact</a>
+        <a class="ui labeled icon button fluid orange" href="{{pathFor 'myPlaces'}}"><i class="setting icon"></i>Mes commerces</a>
+        {{/if}}
       </div>
     {{else}}
       {{#if isConnected}}
