--- a/client/templates/placeEdit/placeEdit_template.html
+++ b/client/templates/placeEdit/placeEdit_template.html
@@ -18,6 +18,10 @@
       {{> afQuickField placeholder="schemaLabel" name="addresses.0.phone"}}
       {{> afQuickField placeholder="schemaLabel" name="addresses.0.email"}}
       {{> afQuickField placeholder="schemaLabel" name="website"}}
+      <hr>
+      {{> afQuickField placeholder="schemaLabel" name="currency"}}
+      {{> afQuickField placeholder="schemaLabel" name="currencyLeft" checkboxType="slider"}}
+      <hr>
       {{> afQuickField placeholder="schemaLabel" name="loyaltyCard.enabled" checkboxType="slider"}}
       <div class="loyaltyCard">
         {{#if loyaltyCard.pointCost}}
